Bug 249981 - [@property] Fallback that does not match syntax should make var() invalid
Summary: [@property] Fallback that does not match syntax should make var() invalid
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: CSS (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Antti Koivisto
URL:
Keywords: InRadar
Depends on:
Blocks: 189692
  Show dependency treegraph
 
Reported: 2023-01-01 06:29 PST by Antti Koivisto
Modified: 2023-01-01 11:25 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Comment 1 Radar WebKit Bug Importer 2023-01-01 06:30:44 PST
<rdar://problem/103799338>
Comment 2 Antti Koivisto 2023-01-01 06:35:20 PST
Pull request: https://github.com/WebKit/WebKit/pull/8116
Comment 3 EWS 2023-01-01 11:25:15 PST
Committed 258373@main (6dabb8f934a3): <https://commits.webkit.org/258373@main>

Reviewed commits have been landed. Closing PR #8116 and removing active labels.